src/style.css
/*
dark
#264653
#2a9d8f
#e9c46a
#f4a261
#e76f51
medium
#227c9d
#17c3b2
#ffcb77
#fef9ef 
#fe6d73
light
#ffa69e
#faf3dd
#b8f2e6
#aed9e0
#5e6472
 --------------------- */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* ---------------------Home------------------ */

.home-container {
  height: 100vh;
  background-image: linear-gradient(
      to right bottom,
      rgba(67, 67, 67, 0.7),
      rgba(67, 67, 67, 0.7)
    ),
    url(https://res.cloudinary.com/deiacifoni/image/upload/v1665709045/fruits/background2_cdk4fs.jpg);
  background-size: cover;
}

.home-title {
  width: 100%;
  font-size: 4rem;
  text-align: center;
  justify-self: center;
  padding-top: 3rem;
  color: #fef9ef;
}

.home-btn-container {
  width: 100%;
  height: 80%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.home-btn-box {
  width: 25%;
  height: 15%;
  font-size: 2rem;
  font-weight: bold;
  padding: 0.5rem 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 4px solid #264653;
  border-radius: 0.8rem;
  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 8px 8px;
  background-color: #faf3dd;
}

.home-btn-box a {
  text-decoration: none;
  color: #264653;
}

/* ---------------------GamePageNavBar------------------ */

.gamePageNav-container {
  width: 100%vw;
  height: 5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 3rem;
  background-color: #17c3b2;
  color: #264653;
}

.gamePageNav-title {
  font-size: 2rem;
  font-weight: bold;
}

.gamePageNav-list {
  list-style: none;
  display: flex;
  gap: 5rem;
}

.gamePageNav-item {
  font-size: 1.5rem;
  font-weight: bold;
  text-decoration: none;
  padding: 0.5rem 0.8rem;
  background-color: #b8f2e6;
  color: #264653;
  border-radius: 0.4rem;
}

.nav-icon-icon {
  width: 2.2rem;
  color: #fff;
  /* overflow: visible; */
}

/* ---------------------GameApp & Game------------------ */

.gameapp-container {
  height: 100%;
  background-color: #faf3dd;
}

.game-container {
  height: 90vh;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

/* ---------------------Board------------------ */

.board-container {
  height: 60vh;
  margin-top: 3rem;
  display: grid;
  justify-content: center;
}

.board-level1 {
  grid-row: 1 / 15;
  grid-column: 1 / 15;
  z-index: 0;
}

.board-level2 {
  grid-row: 2 / 16;
  grid-column: 2 / 16;
  z-index: 5;
}

.board-level3 {
  grid-row: 1 / 15;
  grid-column: 1 / 15;
  z-index: 10;
}

/* ---------------------BottomHolderBar------------------ */
.bottomHolderBar-container {
  width: 520px;
  height: 70px;
  padding: 4px 15px;
  margin: 20px auto 0 auto;
  border: 2px solid #227c9d;
  border-radius: 0.3rem;
}

/* ---------------------Tile------------------ */

.tileLevel2-position {
  position: relative;
  left: 35px;
  top: -180px;
}
.tileLevel3-position {
  position: relative;
  top: -422px;
}

/*try something  overflow: hidden; to adjust tile (sobreposto ta mostrando o de baixo)*/
.tile {
  width: 60px;
  height: 60px;
  margin: 0.2rem 0.3rem;
  border: 2px solid #227c9d;
  border-radius: 0.3rem;
  box-shadow: rgba(0, 0, 0, 0.4) 3px 3px 4px;
}

.tile-null {
  width: 60px;
  height: 60px;
  margin: 0.2rem 0.3rem;
  border: 2px solid #227c9d;
  visibility: hidden;
}

/* ---------------------Win LOse Card------------------ */

.card-container {
  width: 20rem;
  height: 10rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem;
  margin: 10rem auto;
  color: #264653;
  border: 2px solid #227c9d;
  border-radius: 2rem;
}

.card-winner {
  background-color: #b8f2e6;
}

.card-gameover {
  background-color: #ffa69e;
}

.card-title {
  margin: 1rem auto 2.5rem auto;
  font-size: 3rem;
}

.card-btn {
  text-decoration: none;
  font-size: 1.4rem;
  font-weight: bold;
  padding: 0.5rem;
  margin: 1rem 1.8rem;
  color: #227c9d;
  background-color: #faf3dd;
  border: 1px solid #227c9d;
  border-radius: 0.8rem;
}

